--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,13 @@
         <module>web</module>
     </modules>
 
-    <distributionManagement>
+    <!--<distributionManagement>
         <repository>
             <id>library4</id>
             <name>Library4 application</name>
             <url>file://${env.CATALINA_HOME}webapps/library4/</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement>-->
 
     <build>
         <plugins>
