--- a/services/pom.xml
+++ b/services/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>library4</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.petko</groupId>
+    <!--<groupId>com.petko</groupId>-->
     <artifactId>services</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
