--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>library4</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.petko</groupId>
+    <!--<groupId>com.petko</groupId>-->
     <artifactId>web</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -22,7 +22,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>web</finalName>
+        <finalName>library4</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
