--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-page.index=/jsp/index.jsp
-page.error=/jsp/error.jsp
-page.main=/jsp/main.jsp
+page.index=/index.jsp
+page.error=/WEB-INF/jsp/error.jsp
+page.main=/WEB-INF/jsp/main.jsp
