--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 page.index=/index.jsp
 page.error=/WEB-INF/jsp/error.jsp
 page.main=/WEB-INF/jsp/main.jsp
+page.mainadmin=/WEB-INF/jsp/mainadmin.jsp
