--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -2,3 +2,4 @@ page.index=/index.jsp
 page.error=/WEB-INF/jsp/error.jsp
 page.main=/WEB-INF/jsp/main.jsp
 page.mainadmin=/WEB-INF/jsp/mainadmin.jsp
+page.showusers=/WEB-INF/jsp/showusers.jsp
