--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -3,3 +3,5 @@ page.error=/WEB-INF/jsp/error.jsp
 page.main=/WEB-INF/jsp/main.jsp
 page.mainadmin=/WEB-INF/jsp/mainadmin.jsp
 page.showusers=/WEB-INF/jsp/showusers.jsp
+page.register=/WEB-INF/jsp/registration.jsp
+page.registerOk=/WEB-INF/jsp/registrationOk.jsp
