--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,15 @@
     </servlet-mapping>
 
     <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>com.petko.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <servlet-name>controller</servlet-name>
+    </filter-mapping>
+
+    <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>com.petko.AuthorizationFilter</filter-class>
     </filter>
