--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -5,3 +5,4 @@ page.mainadmin=/WEB-INF/jsp/mainadmin.jsp
 page.showusers=/WEB-INF/jsp/showusers.jsp
 page.register=/WEB-INF/jsp/registration.jsp
 page.registerOk=/WEB-INF/jsp/registrationOk.jsp
+page.searchBookUser=/WEB-INF/jsp/searchBookForUser.jsp
