--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -6,3 +6,4 @@ page.showusers=/WEB-INF/jsp/showusers.jsp
 page.register=/WEB-INF/jsp/registration.jsp
 page.registerOk=/WEB-INF/jsp/registrationOk.jsp
 page.searchBookUser=/WEB-INF/jsp/searchBookForUser.jsp
+page.myOrders=/WEB-INF/jsp/myOrders.jsp
