--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -7,3 +7,4 @@ page.register=/WEB-INF/jsp/registration.jsp
 page.registerOk=/WEB-INF/jsp/registrationOk.jsp
 page.searchBookUser=/WEB-INF/jsp/searchBookForUser.jsp
 page.myOrders=/WEB-INF/jsp/myOrders.jsp
+page.myBooks=/WEB-INF/jsp/myBooks.jsp
