WaitingOrdersCommand, ProvideBookCommand, CloseOrderCommand

--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -8,3 +8,4 @@ page.registerOk=/WEB-INF/jsp/registrationOk.jsp
 page.searchBookUser=/WEB-INF/jsp/searchBookForUser.jsp
 page.myOrders=/WEB-INF/jsp/myOrders.jsp
 page.myBooks=/WEB-INF/jsp/myBooks.jsp
+page.waitingOrders=/WEB-INF/jsp/waitingOrders.jsp
