OpenOrdersCommand, ExpiredOrdersCommand, BlockUserCommand

--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -9,3 +9,5 @@ page.searchBookUser=/WEB-INF/jsp/searchBookForUser.jsp
 page.myOrders=/WEB-INF/jsp/myOrders.jsp
 page.myBooks=/WEB-INF/jsp/myBooks.jsp
 page.waitingOrders=/WEB-INF/jsp/waitingOrders.jsp
+page.openedOrders=/WEB-INF/jsp/openedOrders.jsp
+page.expiredOrders=/WEB-INF/jsp/expiredOrders.jsp
