--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -11,3 +11,4 @@ page.myBooks=/WEB-INF/jsp/myBooks.jsp
 page.waitingOrders=/WEB-INF/jsp/waitingOrders.jsp
 page.openedOrders=/WEB-INF/jsp/openedOrders.jsp
 page.expiredOrders=/WEB-INF/jsp/expiredOrders.jsp
+page.blackList=/WEB-INF/jsp/blackList.jsp
