--- a/web/src/main/resources/config.properties
+++ b/web/src/main/resources/config.properties
@@ -12,3 +12,5 @@ page.waitingOrders=/WEB-INF/jsp/waitingOrders.jsp
 page.openedOrders=/WEB-INF/jsp/openedOrders.jsp
 page.expiredOrders=/WEB-INF/jsp/expiredOrders.jsp
 page.blackList=/WEB-INF/jsp/blackList.jsp
+page.searchBookAdmin=/WEB-INF/jsp/searchBookAdmin.jsp
+page.addBook=/WEB-INF/jsp/addBook.jsp
